--- a/hessian/.cproject
+++ b/hessian/.cproject
@@ -37,7 +37,7 @@
 								<inputType id="nvcc.compiler.input.cpp.812892530" superClass="nvcc.compiler.input.cpp"/>
 								<inputType id="nvcc.compiler.input.c.1671310844" superClass="nvcc.compiler.input.c"/>
 							</tool>
-							<tool id="nvcc.linker.base.217135354" name="NVCC Linker" superClass="nvcc.linker.base">
+							<tool command="nvcc" commandLinePattern="${COMMAND} ${FLAGS} ${OUTPUT_FLAG} ${OUTPUT_PREFIX} ${OUTPUT} ${INPUTS} `pkg-config opencv --libs`" id="nvcc.linker.base.217135354" name="NVCC Linker" superClass="nvcc.linker.base">
 								<option id="nvcc.linker.option.libs.2110684458" name="Libraries (-l)" superClass="nvcc.linker.option.libs" valueType="libs">
 									<listOptionValue builtIn="false" value="cufft"/>
 									<listOptionValue builtIn="false" value="npps"/>
