--- a/doc/sjtuthesis.cfg
+++ b/doc/sjtuthesis.cfg
@@ -69,7 +69,7 @@
   \fi
 \fi
 \def\sjtu@value@title{~~~~~（论~文~题~目）~~~~~}
-\def\sjtu@value@titlemark{\sjtu@value@title}
+\def\sjtu@value@titlemark{毕业实习（论文）报告纸}
 \def\sjtu@value@author{（作~者~姓~名）}
 \def\sjtu@value@advisor{（姓名、专业技术职务、学位）}
 \def\sjtu@value@advisorinstitute{（单位）}
