--- a/doc/sjtuthesis.cfg
+++ b/doc/sjtuthesis.cfg
@@ -70,6 +70,7 @@
 \fi
 \def\sjtu@value@title{~~~~~（论~文~题~目）~~~~~}
 \def\sjtu@value@titlemark{毕业实习（论文）报告纸}
+\def\sjtu@value@info{（适用于工科类、理科类专业）}
 \def\sjtu@value@author{（作~者~姓~名）}
 \def\sjtu@value@advisor{（姓名、专业技术职务、学位）}
 \def\sjtu@value@advisorinstitute{（单位）}
